--- a/index.html
+++ b/index.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dev | Madu Montes</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 </head>
+
 <body>
   <div class="container">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Formação</a>
+              <a class="nav-link" aria-current="page" href="#formacao">Formação</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sobre</a>
+              <a class="nav-link" href="#quem-sou">Sobre</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active"  href="#">Home</a>
+              <a class="nav-link active" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Habilidades</a>
+              <a class="nav-link" href="#habilidades">Habilidades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projetos</a>
+              <a class="nav-link" href="#projetos">Projetos</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    
+
     <div id="home" class="row">
       <div class="col-md-6">
         <img src="./assets/imgs/githubIlustration.jpg" alt="Ilustração da Madu Montes" class="img-fluid">
@@ -47,14 +51,76 @@
         <h1>Madu Montes</h1>
         <span>dev front-end, aspirante a designer e uma mini hacker</span>
         <div>
-          <!-- Botões com ícone e texto -->
-          <button type="button" class="btn"><i class="bi bi-github"></i> Github</button>
-          <button type="button" class="btn"><i class="bi bi-linkedin"></i> LinkedIn</button>
+          <a target="_blank" href="https://github.com/Madu-Montes"><button type="button" class="btn"><i class="bi bi-github"></i> Github</button></a>
+          <a target="_blank" href="https://www.linkedin.com/in/maria-eduarda-montes-28727322b/"><button type="button" class="btn"><i class="bi bi-linkedin"></i> LinkedIn</button></a>
         </div>
       </div>
     </div>
+
+    <div id="quem-sou">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-6">
+          <h2>Quem sou</h2>
+          <p>Olá mundo! Prazer, aqui é a Madu. Sou Técnica em Desenvolvimento de Sistemas e atualmente curso Análise e
+            Desenvolvimento de Sistemas na PUCRS. Além da graduação, me dedico ao meu trabalho como aprendiz de SI, onde
+            mergulho no universo da Auditoria Interna e EHT. Minha jornada na TI começou em 2020 e, desde então, venho
+            adquirindo diversas habilidades nessa área fascinante.</p>
+        </div>
+
+        <div class="col-md-6 img-eu">
+          <img src="./assets/imgs/euMadu.png" alt="">
+        </div>
+      </div>
+    </div>
+
+
+    <div id="formacao">
+      <h2>Formação</h2>
+      <div class="timeline">
+        <div class="timeline-event">
+          <div class="timeline-event-content">
+            <div class="timeline-event-icon">2020</div>
+            <div class="timeline-event-description">
+              <span>Início em Tech</span>
+              <span>Front e Design</span>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-event">
+          <div class="timeline-event-content">
+            <div class="timeline-event-icon">2022</div>
+            <div class="timeline-event-description">
+              <span>Técnico em DS</span>
+              <span>Etec Jardim Ângela</span>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-event">
+          <div class="timeline-event-content">
+            <div class="timeline-event-icon">2023</div>
+            <div class="timeline-event-description">
+              <span>Graduação em ADS</span>
+              <span>PUCRS</span>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-event">
+          <div class="timeline-event-content">
+            <div class="timeline-event-icon">2024</div>
+            <div class="timeline-event-description">
+              <span>Cursos Livres</span>
+              <span>Início em Cyber</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
