--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Dev | Madu Montes</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css">
+  <script src="./js/script.js" defer></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-</head>
 </head>
 
 <body>
@@ -51,8 +51,10 @@
         <h1>Madu Montes</h1>
         <span>dev front-end, aspirante a designer e uma mini hacker</span>
         <div>
-          <a target="_blank" href="https://github.com/Madu-Montes"><button type="button" class="btn"><i class="bi bi-github"></i> Github</button></a>
-          <a target="_blank" href="https://www.linkedin.com/in/maria-eduarda-montes-28727322b/"><button type="button" class="btn"><i class="bi bi-linkedin"></i> LinkedIn</button></a>
+          <a target="_blank" href="https://github.com/Madu-Montes"><button type="button" class="btn"><i
+                class="bi bi-github"></i> Github</button></a>
+          <a target="_blank" href="https://www.linkedin.com/in/maria-eduarda-montes-28727322b/"><button type="button"
+              class="btn"><i class="bi bi-linkedin"></i> LinkedIn</button></a>
         </div>
       </div>
     </div>
@@ -114,9 +116,183 @@
           </div>
         </div>
       </div>
+      <div class="infos-formacao">
+        <span></span>
+      </div>
     </div>
 
+    <div id="habilidades">
+      <h2>Habilidades</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <h5>Nível Básico</h5>
+          <div class="icons">
+            <div class="icon-container">
+              <img src="./assets/imgs/powerBI.png" alt="Power BI icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Power BI">
+              <p>Power BI</p>
+              <div class="progress">
+                <div class="progress-bar powerbi" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <h5>Intermediário/Avançado</h5>
+          <div class="icons">
+            <div class="icon-container">
+              <img src="./assets/imgs/html.png" alt="HTML icon" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML">
+              <p>HTML</p>
+              <div class="progress">
+                <div class="progress-bar html" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+              </div>
+            </div>
+            <div class="icon-container">
+              <img src="./assets/imgs/css.png" alt="CSS icon" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS">
+              <p>CSS</p>
+              <div class="progress">
+                <div class="progress-bar css" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+              </div>
+            </div>
+            <div class="icon-container">
+              <img src="./assets/imgs/bootstrap.png" alt="Bootstrap icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Bootstrap">
+              <p>Bootstrap</p>
+              <div class="progress">
+                <div class="progress-bar bootstrap" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+              </div>
+            </div>
+            <div class="icon-container">
+              <img src="./assets/imgs/git.png" alt="Git icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Git">
+              <p>Git</p>
+              <div class="progress">
+                <div class="progress-bar git" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <h5>Tecnologias em Estudo</h5>
+          <div class="icons">
+            <div class="icon-container">
+              <img src="./assets/imgs/js.png" alt="JavaScript icon" data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript">
+              <p>JavaScript</p>
+              <div class="progress">
+                <div class="progress-bar javascript" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+              </div>
+            </div>
+            <div class="icon-container">
+              <img src="./assets/imgs/tryHackMe.png" alt="TryHackMe icon" data-bs-toggle="tooltip" data-bs-placement="top" title="TryHackMe">
+              <p>TryHackMe</p>
+              <div class="progress">
+                <div class="progress-bar tryhackme" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+              </div>
+            </div>
+            <div class="icon-container">
+              <img src="./assets/imgs/mySql.png" alt="MySQL icon" data-bs-toggle="tooltip" data-bs-placement="top" title="MySQL">
+              <p>MySQL</p>
+              <div class="progress">
+                <div class="progress-bar mysql" role="progressbar" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">55%</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    
+
+    <div id="projetos" class="container">
+      <h2>Projetos</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./assets/imgs/rgbaGenerator.png" class="card-img-top" alt="Projeto 1">
+            <div class="card-body">
+              <h5 class="card-title">Gerador RGB</h5>
+              <p class="card-text">Descrição breve do projeto 1.</p>
+              <a href="#" class="btn">Ver Projeto</a>
+              <a target="_blank" href="https://github.com/Madu-Montes"><button type="button" class="btn"><i
+                class="bi bi-github"></i></button></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./assets/imgs/jogoDaVelha.png" class="card-img-top" alt="Projeto 2">
+            <div class="card-body">
+              <h5 class="card-title">Nome do Projeto 2</h5>
+              <p class="card-text">Descrição breve do projeto 2.</p>
+              <a href="#" class="btn">Ver Projeto</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./assets/imgs/IMC.png" class="card-img-top" alt="Projeto 2">
+            <div class="card-body">
+              <h5 class="card-title">Nome do Projeto 2</h5>
+              <p class="card-text">Descrição breve do projeto 2.</p>
+              <a href="#" class="btn">Ver Projeto</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./assets/imgs/cloneNetflix.png" class="card-img-top" alt="Projeto 1">
+            <div class="card-body">
+              <h5 class="card-title">Gerador RGB</h5>
+              <p class="card-text">Descrição breve do projeto 1.</p>
+              <a href="#" class="btn">Ver Projeto</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./assets/imgs/meusLinks.png" class="card-img-top" alt="Projeto 2">
+            <div class="card-body">
+              <h5 class="card-title">Nome do Projeto 2</h5>
+              <p class="card-text">Descrição breve do projeto 2.</p>
+              <a href="#" class="btn">Ver Projeto</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="./assets/imgs/geradorDeSenhas.png" class="card-img-top" alt="Projeto 2">
+            <div class="card-body">
+              <h5 class="card-title">Nome do Projeto 2</h5>
+              <p class="card-text">Descrição breve do projeto 2.</p>
+              <a href="#" class="btn">Ver Projeto</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </div>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-md-3">
+          <img src="./assets/imgs/logo.png" alt="logo branco em fundo verde" class="footer-logo">
+        </div>
+        <div class="col-md-6 text-center">
+          <p class="copyright">
+            &copy; 2024 Madu Montes. Todos os direitos reservados.
+          </p>
+        </div>
+        <div class="col-md-3 text-right">
+          <div class="social-icons">
+            <a href="https://www.linkedin.com/in/maria-eduarda-montes-28727322b/" target="_blank"><i class="bi bi-linkedin"></i></a>
+            <a href="https://github.com/Madu-Montes" target="_blank"><i class="bi bi-github"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
