--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <h5>Nível Básico</h5>
           <div class="icons">
             <div class="icon-container">
-              <img src="./assets/imgs/powerBI.png" alt="Power BI icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Power BI">
+              <img src="./assets/imgs/powerBI.png" alt="Power BI icon" data-bs-toggle="tooltip" data-bs-placement="top">
               <p>Power BI</p>
               <div class="progress">
                 <div class="progress-bar powerbi" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
@@ -140,28 +140,28 @@
           <h5>Intermediário/Avançado</h5>
           <div class="icons">
             <div class="icon-container">
-              <img src="./assets/imgs/html.png" alt="HTML icon" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML">
+              <img src="./assets/imgs/html.png" alt="HTML icon" data-bs-toggle="tooltip" data-bs-placement="top">
               <p>HTML</p>
               <div class="progress">
                 <div class="progress-bar html" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
               </div>
             </div>
             <div class="icon-container">
-              <img src="./assets/imgs/css.png" alt="CSS icon" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS">
+              <img src="./assets/imgs/css.png" alt="CSS icon" data-bs-toggle="tooltip" data-bs-placement="top">
               <p>CSS</p>
               <div class="progress">
                 <div class="progress-bar css" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
               </div>
             </div>
             <div class="icon-container">
-              <img src="./assets/imgs/bootstrap.png" alt="Bootstrap icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Bootstrap">
+              <img src="./assets/imgs/bootstrap.png" alt="Bootstrap icon" data-bs-toggle="tooltip" data-bs-placement="top">
               <p>Bootstrap</p>
               <div class="progress">
                 <div class="progress-bar bootstrap" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
               </div>
             </div>
             <div class="icon-container">
-              <img src="./assets/imgs/git.png" alt="Git icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Git">
+              <img src="./assets/imgs/git.png" alt="Git icon" data-bs-toggle="tooltip" data-bs-placement="top">
               <p>Git</p>
               <div class="progress">
                 <div class="progress-bar git" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
@@ -173,21 +173,21 @@
           <h5>Tecnologias em Estudo</h5>
           <div class="icons">
             <div class="icon-container">
-              <img src="./assets/imgs/js.png" alt="JavaScript icon" data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript">
+              <img src="./assets/imgs/js.png" alt="JavaScript icon" data-bs-toggle="tooltip" data-bs-placement="top">
               <p>JavaScript</p>
               <div class="progress">
                 <div class="progress-bar javascript" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
               </div>
             </div>
             <div class="icon-container">
-              <img src="./assets/imgs/tryHackMe.png" alt="TryHackMe icon" data-bs-toggle="tooltip" data-bs-placement="top" title="TryHackMe">
+              <img src="./assets/imgs/tryHackMe.png" alt="TryHackMe icon" data-bs-toggle="tooltip" data-bs-placement="top">
               <p>TryHackMe</p>
               <div class="progress">
                 <div class="progress-bar tryhackme" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
               </div>
             </div>
             <div class="icon-container">
-              <img src="./assets/imgs/mySql.png" alt="MySQL icon" data-bs-toggle="tooltip" data-bs-placement="top" title="MySQL">
+              <img src="./assets/imgs/mySql.png" alt="MySQL icon" data-bs-toggle="tooltip" data-bs-placement="top">
               <p>MySQL</p>
               <div class="progress">
                 <div class="progress-bar mysql" role="progressbar" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">55%</div>
@@ -208,10 +208,9 @@
             <img src="./assets/imgs/rgbaGenerator.png" class="card-img-top" alt="Projeto 1">
             <div class="card-body">
               <h5 class="card-title">Gerador RGB</h5>
-              <p class="card-text">Descrição breve do projeto 1.</p>
-              <a href="#" class="btn">Ver Projeto</a>
-              <a target="_blank" href="https://github.com/Madu-Montes"><button type="button" class="btn"><i
-                class="bi bi-github"></i></button></a>
+              <p class="card-text">Gere código RGBs facilmente.</p>
+              <a target="_blank" href="https://elaborate-monstera-cd7de4.netlify.app/" class="btn">Ver Projeto</a>
+              <a target="_blank" href="https://github.com/Madu-Montes/RGBGenerator" class="btn"><i class="bi bi-github"></i></a>
             </div>
           </div>
         </div>
@@ -219,9 +218,10 @@
           <div class="card">
             <img src="./assets/imgs/jogoDaVelha.png" class="card-img-top" alt="Projeto 2">
             <div class="card-body">
-              <h5 class="card-title">Nome do Projeto 2</h5>
-              <p class="card-text">Descrição breve do projeto 2.</p>
-              <a href="#" class="btn">Ver Projeto</a>
+              <h5 class="card-title">Jogo da Velha</h5>
+              <p class="card-text">Jogue com um amigo.</p>
+              <a target="_blank" href="https://jogodasenhora.netlify.app/" class="btn">Ver Projeto</a>
+              <a target="_blank" href="https://github.com/Madu-Montes/JogoDaVelha" class="btn"><i class="bi bi-github"></i></a>
             </div>
           </div>
         </div>
@@ -229,21 +229,24 @@
           <div class="card">
             <img src="./assets/imgs/IMC.png" class="card-img-top" alt="Projeto 2">
             <div class="card-body">
-              <h5 class="card-title">Nome do Projeto 2</h5>
-              <p class="card-text">Descrição breve do projeto 2.</p>
-              <a href="#" class="btn">Ver Projeto</a>
+              <h5 class="card-title">Calculadora de IMC</h5>
+              <p class="card-text">Verifique seu IMC em segundos.</p>
+              <a target="_blank" href="https://calculadoraimcdevmm.netlify.app/" class="btn">Ver Projeto</a>
+              <a target="_blank" href="https://github.com/Madu-Montes/CalculadoraDeIMC" class="btn"><i class="bi bi-github"></i></a>
             </div>
           </div>
         </div>
       </div>
+    
       <div class="row">
         <div class="col-md-4">
           <div class="card">
             <img src="./assets/imgs/cloneNetflix.png" class="card-img-top" alt="Projeto 1">
             <div class="card-body">
-              <h5 class="card-title">Gerador RGB</h5>
-              <p class="card-text">Descrição breve do projeto 1.</p>
-              <a href="#" class="btn">Ver Projeto</a>
+              <h5 class="card-title">Clone Netflix</h5>
+              <p class="card-text">Clone do login da Netflix.</p>
+              <a target="_blank" href="https://madu-montes.github.io/Login_Netflix/" class="btn">Ver Projeto</a>
+              <a target="_blank" href="https://github.com/Madu-Montes/Login_Netflix" class="btn"><i class="bi bi-github"></i></a>
             </div>
           </div>
         </div>
@@ -251,9 +254,10 @@
           <div class="card">
             <img src="./assets/imgs/meusLinks.png" class="card-img-top" alt="Projeto 2">
             <div class="card-body">
-              <h5 class="card-title">Nome do Projeto 2</h5>
-              <p class="card-text">Descrição breve do projeto 2.</p>
-              <a href="#" class="btn">Ver Projeto</a>
+              <h5 class="card-title">Card de Links</h5>
+              <p class="card-text">Todos meus links profissionais.</p>
+              <a target="_blank" href="https://majestic-kheer-efdbf1.netlify.app/" class="btn">Ver Projeto</a>
+              <a target="_blank" href="https://github.com/Madu-Montes/MeuLinks" class="btn"><i class="bi bi-github"></i></a>
             </div>
           </div>
         </div>
@@ -261,20 +265,20 @@
           <div class="card">
             <img src="./assets/imgs/geradorDeSenhas.png" class="card-img-top" alt="Projeto 2">
             <div class="card-body">
-              <h5 class="card-title">Nome do Projeto 2</h5>
-              <p class="card-text">Descrição breve do projeto 2.</p>
-              <a href="#" class="btn">Ver Projeto</a>
+              <h5 class="card-title">Gerador de Senhas</h5>
+              <p class="card-text">Gere senhas mais seguras.</p>
+              <a target="_blank" href="https://geradordesenhasjs.netlify.app/" class="btn">Ver Projeto</a>
+              <a target="_blank" href="https://github.com/Madu-Montes/GeradorDeSenhas" class="btn"><i class="bi bi-github"></i></a>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-
   </div>
 
   <footer class="footer">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row align-items-center justify-content-between">
         <div class="col-md-3">
           <img src="./assets/imgs/logo.png" alt="logo branco em fundo verde" class="footer-logo">
