--- a/index.html
+++ b/index.html
@@ -76,50 +76,58 @@
     </div>
 
 
-    <div id="formacao">
+    <div id="formacao" class="container">
       <h2>Formação</h2>
-      <div class="timeline">
-        <div class="timeline-event">
-          <div class="timeline-event-content">
-            <div class="timeline-event-icon">2020</div>
-            <div class="timeline-event-description">
-              <span>Início em Tech</span>
-              <span>Front e Design</span>
-            </div>
+      <div class="row">
+          <div class="col-12">
+              <div class="timeline">
+                  <div class="timeline-event">
+                      <div class="timeline-event-content">
+                          <div class="timeline-event-icon">2020</div>
+                          <div class="timeline-event-description">
+                              <span>Início em Tech</span>
+                              <span>Front e Design</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="timeline-event">
+                      <div class="timeline-event-content">
+                          <div class="timeline-event-icon">2022</div>
+                          <div class="timeline-event-description">
+                              <span>Técnico em DS</span>
+                              <span>Etec Jardim Ângela</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="timeline-event">
+                      <div class="timeline-event-content">
+                          <div class="timeline-event-icon">2023</div>
+                          <div class="timeline-event-description">
+                              <span>Graduação em ADS</span>
+                              <span>PUCRS</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="timeline-event">
+                      <div class="timeline-event-content">
+                          <div class="timeline-event-icon">2024</div>
+                          <div class="timeline-event-description">
+                              <span>Cursos Livres</span>
+                              <span>Início em Cyber</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
-        </div>
-        <div class="timeline-event">
-          <div class="timeline-event-content">
-            <div class="timeline-event-icon">2022</div>
-            <div class="timeline-event-description">
-              <span>Técnico em DS</span>
-              <span>Etec Jardim Ângela</span>
-            </div>
+          <div class="col-12">
+              <div class="infos-formacao">
+                  <span>Clique em cada ano para mais informações ;)</span>
+              </div>
           </div>
-        </div>
-        <div class="timeline-event">
-          <div class="timeline-event-content">
-            <div class="timeline-event-icon">2023</div>
-            <div class="timeline-event-description">
-              <span>Graduação em ADS</span>
-              <span>PUCRS</span>
-            </div>
-          </div>
-        </div>
-        <div class="timeline-event">
-          <div class="timeline-event-content">
-            <div class="timeline-event-icon">2024</div>
-            <div class="timeline-event-description">
-              <span>Cursos Livres</span>
-              <span>Início em Cyber</span>
-            </div>
-          </div>
-        </div>
       </div>
-      <div class="infos-formacao">
-        <span></span>
-      </div>
-    </div>
+  </div>
+  
+  
 
     <div id="habilidades">
       <h2>Habilidades</h2>
@@ -274,29 +282,27 @@
         </div>
       </div>
     </div>
-
   </div>
 
   <footer class="footer">
     <div class="container-fluid">
-      <div class="row align-items-center justify-content-between">
-        <div class="col-md-3">
-          <img src="./assets/imgs/logo.png" alt="logo branco em fundo verde" class="footer-logo">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-12 col-md-3 text-center text-md-start mb-3 mb-md-0">
+                <img src="./assets/imgs/logo.png" alt="logo branco em fundo verde" class="footer-logo">
+            </div>
+            <div class="col-12 col-md-6 text-center mb-3 mb-md-0">
+                <p class="copyright mb-0">&copy; 2024 Madu Montes. Todos os direitos reservados.</p>
+            </div>
+            <div class="col-12 col-md-3 text-center text-md-end">
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/maria-eduarda-montes-28727322b/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/Madu-Montes" target="_blank"><i class="bi bi-github"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6 text-center">
-          <p class="copyright">
-            &copy; 2024 Madu Montes. Todos os direitos reservados.
-          </p>
-        </div>
-        <div class="col-md-3 text-right">
-          <div class="social-icons">
-            <a href="https://www.linkedin.com/in/maria-eduarda-montes-28727322b/" target="_blank"><i class="bi bi-linkedin"></i></a>
-            <a href="https://github.com/Madu-Montes" target="_blank"><i class="bi bi-github"></i></a>
-          </div>
-        </div>
-      </div>
     </div>
-  </footer>
+</footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
