--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
       </div>
     </div>
 
-
     <div id="formacao" class="container">
       <h2>Formação</h2>
       <div class="row">
@@ -126,8 +125,6 @@
         </div>
       </div>
     </div>
-
-
 
     <div id="habilidades">
       <h2>Habilidades</h2>
@@ -215,8 +212,6 @@
         </div>
       </div>
     </div>
-
-
 
     <div id="projetos" class="container">
       <h2>Projetos</h2>
@@ -308,6 +303,7 @@
         </div>
         <div class="col-12 col-md-6 text-center mb-3 mb-md-0">
           <p class="copyright mb-0">&copy; 2024 Madu Montes.</p>
+          <a href="#navbarNav">Voltar ao topo</a>
         </div>
         <div class="col-12 col-md-3 text-center text-md-end">
           <div class="social-icons">
@@ -320,10 +316,8 @@
     </div>
   </footer>
 
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </body>
-
 </html>
